# karakeep

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
docs/: README.md  llm-wiki-write-boundary.md  pc-environment.md  tailscale-funnel-public-access.md  todo.md
docs/architecture/system/: pc-environment.md
docs/claude/: karakeep-rest-write-path.md
docs/guides/: llm-wiki-write-boundary.md  tailscale-funnel-public-access.md  task-order.md
docs/proposals/: 2026-06-12-digital-organization-ssot.md  2026-06-12-unified-category-system.md  2026-06-26-llm-wiki-issue-rework.md  20260612-digital-organization-strategy-with-para.md
docs/proposals/archive/: 2026-06-12-personal-taxonomy-standard.md
docs/proposals/llm-wiki/: SCHEMA.md
docs/superpowers/plans/: 2026-06-12-karakeep-sync.md
docs/superpowers/specs/: 2026-06-12-karakeep-sync-design.md  2026-07-12-ssh-transport-design.md
scripts/: README.md  bootstrap.sh  check.sh  llm-wiki-deploy.sh  vault-sync.sh
sync/: config.yaml.example  mise.toml  pyproject.toml
sync/karakeep_sync/: chrome_import.py  cli.py  config.py  git_ops.py  karakeep.py  markdown.py  state.py
sync/stignore/: vault-company.stignore  vault-notes.stignore
sync/tests/: test_chrome_import.py  test_cli.py  test_config.py  test_git_ops.py  test_karakeep.py  test_markdown.py  test_state.py
