[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "karakeep-sync"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

# 패키지를 명시 — flat-layout 자동탐지가 sync/ 의 비-패키지 디렉토리
# (예: stignore/ Syncthing 템플릿)까지 후보로 잡아 빌드가 깨지는 것을 방지.
[tool.setuptools]
packages = ["karakeep_sync"]

[project.scripts]
karakeep-sync = "karakeep_sync.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
